--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
     <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9071991042477013" crossorigin="anonymous"></script>
 </head>
 
 {% if jekyll.environment == 'production' %}
@@ -34,8 +34,7 @@
     ga('create', '{{site.google_analytics}}', 'auto');
     ga('send', 'pageview');
 </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9071991042477013"
-     crossorigin="anonymous"></script>
+
 {% endif %}
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
@@ -122,6 +121,14 @@
             <!-- Content
 ================================================== -->
             <div class="main-content">
+<!-- MC.Diso -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-9071991042477013"
+     data-ad-slot="7192143436"/>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 {{ content }}
             </div>
 
